dockerfiles/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-containers
  labels:
    app: hexalabs
    component: labs
